--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li class="description-list">
               <img
                 class="description-img"
-                src="./images/Group.svg"
+                src="./images/antenna.svg"
                 alt="антена"
                 width="70"
                 height="70"
@@ -77,7 +77,7 @@
             <li class="description-list">
               <img
                 class="description-img"
-                src="./images/group clock 1.svg"
+                src="./images/clock.svg"
                 alt="clock"
                 width="70"
                 height="70"
@@ -91,7 +91,7 @@
             <li class="description-list">
               <img
                 class="description-img"
-                src="./images/diagram 1.svg"
+                src="./images/diagram.svg"
                 alt="diagram"
                 width="70"
                 height="70"
@@ -105,7 +105,7 @@
             <li class="description-list">
               <img
                 class="description-img"
-                src="./images/astronaut 1 (1).svg"
+                src="./images/astronaut.svg"
                 alt="astronaut"
                 width="70"
                 height="70"
@@ -127,7 +127,7 @@
             <li class="work-list">
               <p class="work-titel-item">Десктопные приложения</p>
               <img
-                src="./images/laptop-pictur.png"
+                src="./images/laptop-pictur.jpg"
                 alt="laptop picture"
                 width="370"
                 height="294"
@@ -136,7 +136,7 @@
             <li class="work-list">
               <p class="work-titel-item">Мобильные приложения</p>
               <img
-                src="./images/mobile-phone-picture.png"
+                src="./images/mobile-phone-picture.jpg"
                 alt="mobile phone picture"
                 width="370"
                 height="294"
@@ -145,7 +145,7 @@
             <li class="work-list">
               <p class="work-titel-item">Дизайнерские решения</p>
               <img
-                src="./images/monitor-picture.png"
+                src="./images/monitor-picture.jpg"
                 alt="monitor picture"
                 width="370"
                 height="294"
