--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
           <h2 hidden>О нас</h2>
           <ul class="description-titel-list list">
             <li class="description-list">
+              <svg>
+                <use href="./images/sprite.svg#antenna"></use>
+              </svg>
+
               <img
                 class="description-img"
                 src="./images/antenna.svg"
