--- a/index.html
+++ b/index.html
@@ -35,11 +35,17 @@
           </ul>
         </nav>
         <address class="header-adress">
-          <a class="header-link link" href="malto:info@devstudio.com"
-            >info@devstudio.com</a
+          <a class="header-link link" href="malto:info@devstudio.com">
+            <svg class="nav-img">
+              <use href="./images/sprite.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a
           >
-          <a class="header-link link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
+          <a class="header-link link" href="tel:+380961111111">
+            <svg class="nav-img">
+              <use href="./images/sprite.svg#icon-tel"></use>
+            </svg>
+            +38 096 111 11 11</a
           >
         </address>
       </div>
@@ -61,17 +67,9 @@
           <h2 hidden>О нас</h2>
           <ul class="description-titel-list list">
             <li class="description-list">
-              <svg>
-                <use href="./images/sprite.svg#antenna"></use>
+              <svg class="description-img">
+                <use href="./images/sprite.svg#icon-antenna"></use>
               </svg>
-
-              <img
-                class="description-img"
-                src="./images/antenna.svg"
-                alt="антена"
-                width="70"
-                height="70"
-              />
               <h3 class="description-titel">Внимание к деталям</h3>
               <p class="description-titel-item">
                 Идейные соображения, а также начало повседневной работы по
@@ -79,13 +77,9 @@
               </p>
             </li>
             <li class="description-list">
-              <img
-                class="description-img"
-                src="./images/clock.svg"
-                alt="clock"
-                width="70"
-                height="70"
-              />
+              <svg class="description-img">
+                <use href="./images/sprite.svg#icon-clock"></use>
+              </svg>
               <h3 class="description-titel">Пунктуальность</h3>
               <p class="description-titel-item">
                 Задача организации, в особенности же рамки и место обучения
@@ -93,13 +87,9 @@
               </p>
             </li>
             <li class="description-list">
-              <img
-                class="description-img"
-                src="./images/diagram.svg"
-                alt="diagram"
-                width="70"
-                height="70"
-              />
+              <svg class="description-img">
+                <use href="./images/sprite.svg#icon-diagram"></use>
+              </svg>
               <h3 class="description-titel">Планирование</h3>
               <p class="description-titel-item">
                 Равным образом консультация с широким активом в значительной
@@ -107,13 +97,9 @@
               </p>
             </li>
             <li class="description-list">
-              <img
-                class="description-img"
-                src="./images/astronaut.svg"
-                alt="astronaut"
-                width="70"
-                height="70"
-              />
+              <svg class="description-img">
+                <use href="./images/sprite.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="description-titel">Современные технологии</h3>
               <p class="description-titel-item">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -179,32 +165,44 @@
                     class="comand-link-list link"
                     href=""
                     aria-label="instagram link"
-                    >instagram</a
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="comand-link-list-item">
                   <a
                     class="comand-link-list link"
                     href=""
-                    aria-label="twitter link"
-                    >twitter</a
+                    aria-label="instagram link"
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="comand-link-list-item">
                   <a
                     class="comand-link-list link"
                     href=""
-                    aria-label="facebook link"
-                    >facebook</a
+                    aria-label="instagram link"
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="comand-link-list-item">
                   <a
                     class="comand-link-list link"
                     href=""
-                    aria-label="linkedin link"
-                    >linkedin</a
+                    aria-label="instagram link"
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -224,32 +222,44 @@
                     class="comand-link-list link"
                     href=""
                     aria-label="instagram link"
-                    >instagram</a
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="comand-link-list-item">
                   <a
                     class="comand-link-list link"
                     href=""
-                    aria-label="twitter link"
-                    >twitter</a
+                    aria-label="instagram link"
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="comand-link-list-item">
                   <a
                     class="comand-link-list link"
                     href=""
-                    aria-label="facebook link"
-                    >facebook</a
+                    aria-label="instagram link"
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="comand-link-list-item">
                   <a
                     class="comand-link-list link"
                     href=""
-                    aria-label="linkedin link"
-                    >linkedin</a
+                    aria-label="instagram link"
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -269,32 +279,44 @@
                     class="comand-link-list link"
                     href=""
                     aria-label="instagram link"
-                    >instagram</a
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="comand-link-list-item">
                   <a
                     class="comand-link-list link"
                     href=""
-                    aria-label="twitter link"
-                    >twitter</a
+                    aria-label="instagram link"
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="comand-link-list-item">
                   <a
                     class="comand-link-list link"
                     href=""
-                    aria-label="facebook link"
-                    >facebook</a
+                    aria-label="instagram link"
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="comand-link-list-item">
                   <a
                     class="comand-link-list link"
                     href=""
-                    aria-label="linkedin link"
-                    >linkedin</a
+                    aria-label="instagram link"
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -313,33 +335,45 @@
                   <a
                     class="comand-link-list link"
                     href=""
-                    aria-label="twitter link"
-                    >twitter</a
+                    aria-label="instagram link"
                   >
-                </li>
-                <li class="comand-link-list-item">
-                  <a
-                    class="comand-link-list link"
-                    href=""
-                    aria-label="facebook link"
-                    >facebook</a
-                  >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="comand-link-list-item">
                   <a
                     class="comand-link-list link"
                     href=""
                     aria-label="instagram link"
-                    >instagram</a
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
                 <li class="comand-link-list-item">
                   <a
                     class="comand-link-list link"
                     href=""
-                    aria-label="linkedin link"
-                    >linkedin</a
+                    aria-label="instagram link"
                   >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="comand-link-list-item">
+                  <a
+                    class="comand-link-list link"
+                    href=""
+                    aria-label="instagram link"
+                  >
+                    <svg class="comand-link-img">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -352,58 +386,46 @@
           <h2 class="client-titel">Постоянные клиенты</h2>
           <ul class="client-item list">
             <li class="client-item-link">
-              <a class="client-item-link-list" href=""
-                ><img
-                  src="./images/Client-1.svg"
-                  alt="Client 1"
-                  width="80"
-                  height="42"
-              /></a>
+              <a class="client-item-link-list" href="">
+                <svg class="client-link-img">
+                  <use href="./images/sprite.svg#icon-Client-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item-link">
-              <a class="client-item-link-list" href=""
-                ><img
-                  src="./images/Client-2.svg"
-                  alt="Client 2"
-                  width="80"
-                  height="42"
-              /></a>
+              <a class="client-item-link-list" href="">
+                <svg class="client-link-img">
+                  <use href="./images/sprite.svg#icon-Client-2"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item-link">
-              <a class="client-item-link-list" href=""
-                ><img
-                  src="./images/Client-3.svg"
-                  alt="Client 3"
-                  width="80"
-                  height="42"
-              /></a>
+              <a class="client-item-link-list" href="">
+                <svg class="client-link-img">
+                  <use href="./images/sprite.svg#icon-Client-3"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item-link">
-              <a class="client-item-link-list" href=""
-                ><img
-                  src="./images/Client-4.svg"
-                  alt="Client 4"
-                  width="80"
-                  height="42"
-              /></a>
+              <a class="client-item-link-list" href="">
+                <svg class="client-link-img">
+                  <use href="./images/sprite.svg#icon-Client-4"></use>
+                </svg>
+              </a>
             </li>
             <li class="client-item-link">
-              <a class="client-item-link-list" href=""
-                ><img
-                  src="./images/Client-5.svg"
-                  alt="Client 5"
-                  width="80"
-                  height="42"
-              /></a>
+              <a class="client-item-link-list" href="">
+                <svg class="client-link-img">
+                  <use href="./images/sprite.svg#icon-Client-5"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <a class="client-item-link-list" href=""
-                ><img
-                  src="./images/Client-6.svg"
-                  alt="Client 6"
-                  width="80"
-                  height="42"
-              /></a>
+              <a class="client-item-link-list" href="">
+                <svg class="client-link-img">
+                  <use href="./images/sprite.svg#icon-Client-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -445,38 +467,50 @@
 
         <div class="footer-social-link">
           <b class="footer-item">присоединяйтесь</b>
-          <ul class="footer-social-list list">
-            <li class="footer-social-list-link">
+          <ul class="comand-link list">
+            <li class="comand-link-list-item comand-link-list-item-footcol">
               <a
-                class="footer-label-link link"
+                class="comand-link-list link"
                 href=""
                 aria-label="instagram link"
-                >instagram</a
               >
+                <svg class="comand-link-img">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-social-list-link">
+            <li class="comand-link-list-item footcol">
               <a
-                class="footer-label-link link"
+                class="comand-link-list link"
                 href=""
-                aria-label="twitter link"
-                >twitter</a
+                aria-label="instagram link"
               >
+                <svg class="comand-link-img">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-social-list-link">
+            <li class="comand-link-list-item footcol">
               <a
-                class="footer-label-link link"
+                class="comand-link-list link"
                 href=""
-                aria-label="facebook link"
-                >facebook</a
+                aria-label="instagram link"
               >
+                <svg class="comand-link-img">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-social-list-link">
+            <li class="comand-link-list-item footcol">
               <a
-                class="footer-label-link link"
+                class="comand-link-list link"
                 href=""
-                aria-label="linkedin link"
-                >linkedin</a
+                aria-label="instagram link"
               >
+                <svg class="comand-link-img">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
