--- a/portfolio.html
+++ b/portfolio.html
@@ -36,11 +36,17 @@
           </ul>
         </nav>
         <address class="header-adress">
-          <a class="header-link link" href="malto:info@devstudio.com"
-            >info@devstudio.com</a
+          <a class="header-link link" href="malto:info@devstudio.com">
+            <svg class="nav-img">
+              <use href="./images/sprite.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com</a
           >
-          <a class="header-link link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
+          <a class="header-link link" href="tel:+380961111111">
+            <svg class="nav-img">
+              <use href="./images/sprite.svg#icon-tel"></use>
+            </svg>
+            +38 096 111 11 11</a
           >
         </address>
       </div>
@@ -69,7 +75,7 @@
         </ul>
         <ul class="main-jobs list">
           <li class="main-jobs-item">
-            <a class="link" href="">
+            <a class="main-jobs-item-link link" href="">
               <img
                 class="main-jobs-item-link"
                 src="./images/technocrak.jpg"
@@ -233,7 +239,6 @@
         </ul>
       </section>
     </main>
-
     <footer class="footer">
       <div class="container footer-wraper">
         <div class="footer-adress-link">
@@ -270,38 +275,50 @@
 
         <div class="footer-social-link">
           <b class="footer-item">присоединяйтесь</b>
-          <ul class="footer-social-list list">
-            <li class="footer-social-list-link">
+          <ul class="comand-link list">
+            <li class="comand-link-list-item comand-link-list-item-footcol">
               <a
-                class="footer-label-link link"
+                class="comand-link-list link"
                 href=""
                 aria-label="instagram link"
-                >instagram</a
               >
+                <svg class="comand-link-img">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-social-list-link">
+            <li class="comand-link-list-item footcol">
               <a
-                class="footer-label-link link"
+                class="comand-link-list link"
                 href=""
-                aria-label="twitter link"
-                >twitter</a
+                aria-label="instagram link"
               >
+                <svg class="comand-link-img">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-social-list-link">
+            <li class="comand-link-list-item footcol">
               <a
-                class="footer-label-link link"
+                class="comand-link-list link"
                 href=""
-                aria-label="facebook link"
-                >facebook</a
+                aria-label="instagram link"
               >
+                <svg class="comand-link-img">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-social-list-link">
+            <li class="comand-link-list-item footcol">
               <a
-                class="footer-label-link link"
+                class="comand-link-list link"
                 href=""
-                aria-label="linkedin link"
-                >linkedin</a
+                aria-label="instagram link"
               >
+                <svg class="comand-link-img">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
