--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
             </a>
           </li>
           <li class="main-jobs-item">
-            <a class="link" href=""
+            <a class="main-jobs-item-link link" href=""
               ><img
                 class="main-jobs-item-link"
                 src="./images/poster-basketbol.jpg"
@@ -111,7 +111,7 @@
             >
           </li>
           <li class="main-jobs-item">
-            <a class="link" href=""
+            <a class="main-jobs-item-link link" href=""
               ><img
                 class="main-jobs-item-link"
                 src="./images/restoran-seafood.jpg"
@@ -129,7 +129,7 @@
             >
           </li>
           <li class="main-jobs-item">
-            <a class="link" href=""
+            <a class="main-jobs-item-link link" href=""
               ><img
                 class="main-jobs-item-link"
                 src="./images/headphones.jpg"
@@ -147,7 +147,7 @@
             >
           </li>
           <li class="main-jobs-item">
-            <a class="link" href=""
+            <a class="main-jobs-item-link link" href=""
               ><img
                 class="main-jobs-item-link"
                 src="./images/boxes.jpg"
@@ -165,7 +165,7 @@
             >
           </li>
           <li class="main-jobs-item">
-            <a class="link" href=""
+            <a class="main-jobs-item-link link" href=""
               ><img
                 class="main-jobs-item-link"
                 src="./images/monitor.jpg"
@@ -183,7 +183,7 @@
             >
           </li>
           <li class="main-jobs-item">
-            <a class="link" href=""
+            <a class="main-jobs-item-link link" href=""
               ><img
                 class="main-jobs-item-link"
                 src="./images/books.jpg"
@@ -201,7 +201,7 @@
             >
           </li>
           <li class="main-jobs-item">
-            <a class="link" href=""
+            <a class="main-jobs-item-link link" href=""
               ><img
                 class="main-jobs-item-link"
                 src="./images/label.jpg"
@@ -219,7 +219,7 @@
             >
           </li>
           <li class="main-jobs-item">
-            <a class="link" href=""
+            <a class="main-jobs-item-link link" href=""
               ><img
                 class="main-jobs-item-link"
                 src="./images/noutbook.jpg"
